Fix broken layout on stat page

--- a/src/app.less
+++ b/src/app.less
@@ -22,7 +22,7 @@
   margin: 40rpx 0 40rpx 0;
   .panel-item {
     width: 100%;
-    height: 80rpx;
+    min-height: 80rpx;
     display: flex;  
     flex-direction: row;
     align-items: center;
@@ -33,11 +33,11 @@
     padding-right: 1rem;
     box-sizing: border-box;
     .label {
-      flex: 1;
+      flex: 1 100%;
     }
     input,.value {
       color: @gray-dark;
-      flex: 2;
+      flex: 2 100%;
     }
     .value {
       text-align: right;
